--- a/Style.css
+++ b/Style.css
@@ -46,6 +46,11 @@ nav ul li a.active{
 
 }
 
+.contact form{
+    display: flex;
+    flex-direction: colum;
+    gap: 10px;
+
 footer {
 
     background-color: aqua;
@@ -59,5 +64,6 @@ main {
 
  flex: 1;
  padding: 20pxs;
+
 
 }
